Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1678

Panic when a file created with O_LOV_DELAY_CREAT is opened by fid

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • None
    • 3
    • 4463

    Description

      To reproduce:

      • create a file without a lov (O_LOV_DELAY_CREATE)
      • open it through .lustre/fid/...... path

      Attached is a sanity.sh patch which introduces a new test to reproduce the bug
      I will create a gerrit with the reproducer

      Attachments

        1. openbyfid-O_LOV_DELAY.patch.repro
          0.6 kB
          jacques-charles lafoucriere

        Activity

          People

            bobijam Zhenyu Xu
            cealustre CEA
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: